Update test structure for Laravel 8
- delete empty tests
- update factory structure

--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,11 @@
         "psr-4": {
             "Anomaly\\HtmlBlockExtension\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Anomaly\\HtmlBlockExtensionTest\\": "tests/",
+            "Database\\Factories\\Anomaly\\HtmlBlockExtension\\": "factories/"
+        }
     }
 }
